--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="Logged_In_fragment">Logged in: jdoe</string>
+
+
+    <string name="cust_sign_textView">Please sign to acknowledge a completed session</string>
+    <string name="Signature_line">Signature</string>
+    <string name="submit_cust_sign_button">Submit</string>
 </resources>
